Création de la fiche fonts_icons
Création d'une page html témoin pour les polices et icônes à utiliser

--- a/fonts_icons.html
+++ b/fonts_icons.html
@@ -19,6 +19,24 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>Text Style</h1>
+    <h2>Text Style</h2>
+    <p>Text Style</p>
+    <div>
+        <i class="fa-solid fa-star"></i>
+        <i class="fa-solid fa-star"></i>
+        <i class="fa-solid fa-star"></i>
+        <i class="fa-solid fa-star"></i>
+        <i class="fa-regular fa-star"></i>
+    </div>
+    <div>
+        <i class="fa-solid fa-money-bill-wave"></i>
+        <i class="fa-solid fa-chart-line"></i>
+        <i class="fa-solid fa-heart"></i>
+        <i class="fa-solid fa-star"></i>
+        <i class="fa-solid fa-dog"></i>
+        <i class="fa-solid fa-info"></i>
+        <i class="fa-solid fa-person"></i>
+    </div>
 </body>
 </html>
