Rédaction HTML du Header

--- a/index.html
+++ b/index.html
@@ -2,9 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="Content language" content="fr-FR">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+    <meta name="description" content="Booki - Trouvez votre hébergement pour des vacances de rêve ainsi que des activités sur votre lieu de séjour.">
+    
+    <title>Booki - Trouvez votre hébergement</title>
     <!--Lien CSS-->
     <link rel="stylesheet" href="css/styles.css" />
 
@@ -16,9 +19,17 @@
     <!--Intégration du kit FOntAwesome pour les icones --> 
     <script src="https://kit.fontawesome.com/a68a30899b.js" crossorigin="anonymous"></script>
 
-    <title>Document</title>
 </head>
 <body>
-    
+    <header>
+        <nav>
+            <img src="img_Booki/logo/Booki@3x.png" alt="Logo Booki">
+            <ul>
+                <li>Hébergements</li>
+                <li>Activités</li>
+            </ul>
+        </nav>
+
+    </header>
 </body>
 </html>
