--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <body>
     <header>
         <nav>
-            <img src="img_Booki/logo/Booki@3x.png" alt="Logo Booki">
+            <img class=logo src="img_Booki/logo/Booki@3x.png" alt="Logo Booki">
             <ul>
                 <li>Hébergements</li>
                 <li>Activités</li>
