--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!--Intégration des polices Google Font-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap" >
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;700&display=swap" >
     
     <!--Intégration du kit FOntAwesome pour les icones --> 
     <script src="https://kit.fontawesome.com/a68a30899b.js" crossorigin="anonymous"></script>
@@ -24,9 +24,9 @@
     <header>
         <nav>
             <img class=logo src="img_Booki/logo/Booki@3x.png" alt="Logo Booki">
-            <ul>
-                <li>Hébergements</li>
-                <li>Activités</li>
+            <ul class="menu_nav">
+                <li class="elmt_nav">Hébergements</li>
+                <li class="elms_nav">Activités</li>
             </ul>
         </nav>
 
