Finalisation du header

--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
 <body>
     <header>
         <nav>
-            <img class=logo src="img_Booki/logo/Booki@3x.png" alt="Logo Booki">
+            <img src="img_Booki/logo/Booki@3x.png" alt="Logo Booki" id="logo">
             <ul class="menu_nav">
-                <li class="elmt_nav">Hébergements</li>
-                <li class="elms_nav">Activités</li>
+                <li><a href="">Hébergements</a></li>
+                <li><a href="">Activités</a></li>
             </ul>
         </nav>
 
