--- a/index.html
+++ b/index.html
@@ -29,7 +29,17 @@
                 <li><a href="">Activités</a></li>
             </ul>
         </nav>
-
     </header>
+
+    <main>
+        <section>
+            <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
+            <p>En plein centre ville ou en pleine nature</p>
+
+            <div class="bloc_recherche">
+                
+            </div>
+        </section>
+    </main>
 </body>
 </html>
