Rédaction main / searchbar

--- a/index.html
+++ b/index.html
@@ -37,7 +37,9 @@
             <p>En plein centre ville ou en pleine nature</p>
 
             <div class="bloc_recherche">
-                
+                <i class="fa-solid fa-location-dot" id="location_searchbar"></i>
+                <input type="text" name="choosen_city" id="city" placeholder="Marseille, France">
+                <a href="">Rechercher</a>
             </div>
         </section>
     </main>
