--- a/index.html
+++ b/index.html
@@ -45,8 +45,24 @@
                     <input type="button" name="button_city" value="Rechercher" id="Recherche">
             </form>
             
-            <div class="filters">
-                
+            <div class="filters_box">
+                <span id="filter_title">Filtres</span>
+                <div class="filters"> <!--filtre Economique-->
+                    <i class="fa-solid fa-money-bill-wave"></i>
+                    <span>Économique</span>
+                </div>
+                <div class="filters"> <!--filtre Familial-->
+                    <i class="fa-solid fa-person" id="specific_family"></i>
+                    <span>Familial</span>
+                </div>
+                <div class="filters"> <!--filtre Romantique-->
+                    <i class="fa-solid fa-heart"></i>
+                    <span>Romantique</span>
+                </div>
+                <div class="filters"> <!--filtre Animaux-->
+                    <i class="fa-solid fa-dog"></i>
+                    <span>Animaux autorisés</span>
+                </div>
             </div>
 
         </section>
