Résolution wrap hébergement

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr-FR">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="Content language" content="fr-FR">
@@ -80,6 +80,105 @@
         <div class="bloc_hebergements">
             <section class="hebergements">
                 <h2>Hébergements à Marseille</h2>
+                <div class="cards_list">
+                    
+                    <div class="card_hebergement">
+                        <img src="img_Booki/hebergements/1_xlarge/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="img-Hebergement">
+                        <h3>Auberge La Canebière</h3>
+                        <div class="price_hebergement">
+                            <p>Nuit à partir de 25</p>
+                            <p class="euro">€</p>
+                        </div>
+                        <div class="rating">
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star empty_star"></i>
+                        </div>
+                    </div>
+
+                    <div class="card_hebergement">
+                        <img src="img_Booki/hebergements/1_xlarge/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="img-Hebergement">
+                        <h3>Auberge La Canebière</h3>
+                        <div class="price_hebergement">
+                            <p>Nuit à partir de 25</p>
+                            <p class="euro">€</p>
+                        </div>
+                        <div class="rating">
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star empty_star"></i>
+                        </div>
+                    </div>
+
+                    <div class="card_hebergement">
+                        <img src="img_Booki/hebergements/1_xlarge/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="img-Hebergement">
+                        <h3>Auberge La Canebière</h3>
+                        <div class="price_hebergement">
+                            <p>Nuit à partir de 25</p>
+                            <p class="euro">€</p>
+                        </div>
+                        <div class="rating">
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star empty_star"></i>
+                        </div>
+                    </div>
+
+                    <div class="card_hebergement">
+                        <img src="img_Booki/hebergements/1_xlarge/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="img-Hebergement">
+                        <h3>Auberge La Canebière</h3>
+                        <div class="price_hebergement">
+                            <p>Nuit à partir de 25</p>
+                            <p class="euro">€</p>
+                        </div>
+                        <div class="rating">
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star empty_star"></i>
+                        </div>
+                    </div>
+
+                    <div class="card_hebergement">
+                        <img src="img_Booki/hebergements/1_xlarge/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="img-Hebergement">
+                        <h3>Auberge La Canebière</h3>
+                        <div class="price_hebergement">
+                            <p>Nuit à partir de 25</p>
+                            <p class="euro">€</p>
+                        </div>
+                        <div class="rating">
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star empty_star"></i>
+                        </div>
+                    </div>
+
+                    <div class="card_hebergement">
+                        <img src="img_Booki/hebergements/1_xlarge/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="img-Hebergement">
+                        <h3>Auberge La Canebière</h3>
+                        <div class="price_hebergement">
+                            <p>Nuit à partir de 25</p>
+                            <p class="euro">€</p>
+                        </div>
+                        <div class="rating">
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star empty_star"></i>
+                        </div>
+                    </div>
+            
+                </div>
             </section>
 
             <section class="populaires">
