Finalisation de la section HEBERGEMENTS

--- a/cards.html
+++ b/cards.html
@@ -21,19 +21,23 @@
 </head>
 
 <body>
-    <div class="card_hebergement">
-        <img src="img_Booki/hebergements/1_xlarge/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="img-Hebergement">
-        <h3>Auberge La Canebière</h3>
-        <div class="price_hebergement">
-            <p>Nuit à partir de 25</p>
-            <p class="euro">€</p>
-        </div>
-        <div class="rating">
-            <i class="fa-solid fa-star"></i>
-            <i class="fa-solid fa-star"></i>
-            <i class="fa-solid fa-star"></i>
-            <i class="fa-solid fa-star"></i>
-            <i class="fa-solid fa-star empty_star"></i>
+    <div class="card_populaire">
+        <img src="img_Booki/hebergements/1_xlarge/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="img-Hebergement">
+        <div class="pop_content">
+            <div class="pop_info">
+                <h3>Hôtel le soleil du matin</h3>
+                <div class="price_populaire">
+                    <p>Nuit à partir de 25</p>
+                    <p class="euro">€</p>
+                </div>
+            </div>
+            <div class="rating">
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star empty_star"></i>
+            </div>
         </div>
     </div>
 </body>
