Finalisation version Desktop -Non validée Mentor OC-

--- a/cards.html
+++ b/cards.html
@@ -21,24 +21,9 @@
 </head>
 
 <body>
-    <div class="card_populaire">
-        <img src="img_Booki/hebergements/1_xlarge/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="img-Hebergement">
-        <div class="pop_content">
-            <div class="pop_info">
-                <h3>Hôtel le soleil du matin</h3>
-                <div class="price_populaire">
-                    <p>Nuit à partir de 25</p>
-                    <p class="euro">€</p>
-                </div>
-            </div>
-            <div class="rating">
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star empty_star"></i>
-            </div>
+        <div class="card_activites">
+            <img src="img_Booki/activites/1_xlarge/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="img-Hebergement">
+                <h3>Vieux-Port XL</h3>
         </div>
-    </div>
 </body>
     
