--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 
 </head>
 <body>
+
     <header>
         <nav>
             <img src="img_Booki/logo/Booki@3x.png" alt="Logo Booki" id="logo">
@@ -33,6 +34,7 @@
     </header>
 
     <main>
+        <!--BLOC RECHERCHE & FILTRES-->
         <section>
             <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
             <p>En plein centre ville ou en pleine nature</p>
@@ -77,6 +79,7 @@
             </div>
         </section>
 
+        <!--BLOC HEBERGEMENTS-->
         <div class="bloc_logements" id="rep_logements" >
 
             <section class="hebergements">
@@ -202,7 +205,7 @@
                 <div class="populaires_list">
                     <!--Hôtel le soleil du matin-->
                     <a href="#" class="card_populaire">
-                        <img src="img_Booki/hebergements/1_xlarge/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="img-Hebergement">
+                        <img src="img_Booki/hebergements/1_xlarge/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="img-Hebergement-pop">
                         <div class="populaires_content">
                             <div class="populaires_info">
                                 <h3>Hôtel le soleil du matin</h3>
@@ -222,7 +225,7 @@
                     </a>
                     <!--Chambres d'hôtes Au coeur de l'eau-->
                     <a href="#" class="card_populaire">
-                        <img src="img_Booki/hebergements/1_xlarge/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="img-Hebergement">
+                        <img src="img_Booki/hebergements/1_xlarge/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="img-Hebergement-pop">
                         <div class="populaires_content">
                             <div class="populaires_info">
                                 <h3>Chambres d'hôtes Au coeur de l'eau</h3>
@@ -242,7 +245,7 @@
                     </a>
                     <!--Hôtel Bleu et Blanc-->
                     <a href="#" class="card_populaire">
-                        <img src="img_Booki/hebergements/1_xlarge/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="img-Hebergement">
+                        <img src="img_Booki/hebergements/1_xlarge/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="img-Hebergement-pop">
                         <div class="populaires_content">
                             <div class="populaires_info">
                                 <h3>Hôtel Bleu et Blanc</h3>
@@ -266,20 +269,54 @@
 
         </div>
 
+        <!--BLOC ACTIVITES-->
+        <section class="bloc_activites" id="rep_activites">
+            <h2>Activités à Marseille</h2>
+            <div class="activites_list">
+                <a href="#" class="card_activites">
+                    <img src="img_Booki/activites/1_xlarge/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="img-Activites">
+                        <h3>Vieux-Port</h3>
+                </a>
+                <a href="#" class="card_activites">
+                    <img src="img_Booki/activites/1_xlarge/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="img-Activites">
+                        <h3>Fort de Pomègues</h3>
+                </a>
+                <a href="#" class="card_activites">
+                    <img src="img_Booki/activites/1_xlarge/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="img-Activites">
+                        <h3>Parc national des Calanques</h3>
+                </a>
+                <a href="#" class="card_activites">
+                    <img src="img_Booki/activites/1_xlarge/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="img-Activites">
+                        <h3>Notre-Dame-de-la-Garde</h3>
+                </a>
 
-<p></p><br><br><br><br><br><br>
-<p></p><br><br><br><br><br><br>
-<p></p><br><br><br><br><br><br>
-<p></p><br><br><br><br><br><br>
-<p></p><br><br><br><br><br><br>
-<p></p><br><br><br><br><br><br>
-<p></p><br><br><br><br><br><br>
-<p></p><br><br><br><br><br><br>
-<p></p><br><br><br><br><br><br>
-<p></p><br><br><br><br><br><br>
-<p></p><br><br><br><br><br><br>
-<p></p><br><br><br><br><br><br>
-<p></p><br><br><br><br><br><br>
+            </div>
+        </section>
     </main>
+
+    <footer>
+        <div class="footer_bloc">
+            <p class="footer_title">À propos</p>
+            <ul>
+                <li><a href="#">Fonctionnement du site</a></li>
+                <li><a href="#">Conditions générales</a></li>
+                <li><a href="#">Données et confidentialité</a></li>
+            </ul>
+        </div>
+        <div class="footer_bloc">
+            <p class="footer_title">Nos hébergements</p>
+            <ul>
+                <li><a href="#">Charte qualité</a></li>
+                <li><a href="#">Proposer votre hôtel</a></li>
+            </ul>
+        </div>
+        <div class="footer_bloc">
+            <p class="footer_title">Assistance</p>
+            <ul>
+                <li><a href="#">Centre d'aide</a></li>
+                <li><a href="#">Nous contacter</a></li>
+            </ul>
+        </div>
+    </footer>
 </body>
 </html>
