--- a/index.html
+++ b/index.html
@@ -2,14 +2,13 @@
 <html lang="fr-FR">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="Content language" content="fr-FR">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Booki - Trouvez votre hébergement pour des vacances de rêve ainsi que des activités sur votre lieu de séjour.">
     
     <title>Booki - Trouvez votre hébergement</title>
     <!--Lien CSS-->
-    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="css/styles.css" >
 
     <!--Intégration des polices Google Font-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -39,12 +38,12 @@
             <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
             <p>En plein centre ville ou en pleine nature</p>
 
-            <form method ="post" action="" class="bloc_recherche">
+            <form method ="post" action="#" class="bloc_recherche">
                 <div class="searchbar">
                     <i class="fa-solid fa-location-dot" id="location"></i>
                     <input type="text" name="choosen_city" id="city" placeholder="Marseille, France">
                 </div>
-                    <input type="button" name="button_city" value="Rechercher" id="Recherche">
+                    <input type="button" name="button_city" value="Rechercher" id="recherche">
             </form>
             
             <div class="filters_box">
@@ -90,16 +89,13 @@
                         <img src="img_Booki/hebergements/1_xlarge/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="img-Hebergement">
                         <div class="hebergement_content">
                             <h3>Auberge La Canebière</h3>
-                            <div class="price">
-                                <p>Nuit à partir de 25</p>
-                                <p class="euro">€</p>
-                            </div>
+                            <p class="price">Nuit à partir de 25<span class="euro">€</span></p>
                             <div class="rating">
                                 <i class="fa-solid fa-star"></i>
                                 <i class="fa-solid fa-star"></i>
                                 <i class="fa-solid fa-star"></i>
                                 <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star empty_star"></i>
+                                <i class="fa-solid fa-star"></i>
                             </div>
                         </div>
                     </a>
@@ -108,16 +104,13 @@
                         <img src="img_Booki/hebergements/1_xlarge/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="img-Hebergement">
                         <div class="hebergement_content">
                             <h3>Hôtel du port</h3>
-                            <div class="price">
-                                <p>Nuit à partir de 52</p>
-                                <p class="euro">€</p>
-                            </div>
+                            <p class="price">Nuit à partir de 52<span class="euro">€</span></p>
                             <div class="rating">
                                 <i class="fa-solid fa-star"></i>
                                 <i class="fa-solid fa-star"></i>
                                 <i class="fa-solid fa-star"></i>
                                 <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star empty_star"></i>
+                                <i class="fa-solid fa-star"></i>
                             </div>
                         </div>
                     </a>
@@ -126,16 +119,13 @@
                         <img src="img_Booki/hebergements/1_xlarge/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="img-Hebergement">
                         <div class="hebergement_content">
                             <h3>Hôtel les mouettes</h3>
-                            <div class="price">
-                                <p>Nuit à partir de 76</p>
-                                <p class="euro">€</p>
-                            </div>
+                            <p class="price">Nuit à partir de 76<span class="euro">€</span></p>
                             <div class="rating">
                                 <i class="fa-solid fa-star"></i>
                                 <i class="fa-solid fa-star"></i>
                                 <i class="fa-solid fa-star"></i>
                                 <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star empty_star"></i>
+                                <i class="fa-solid fa-star"></i>
                             </div>
                         </div>
                     </a>
@@ -144,16 +134,13 @@
                         <img src="img_Booki/hebergements/1_xlarge/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="img-Hebergement">
                         <div class="hebergement_content">
                             <h3>Hôtel de la mer</h3>
-                            <div class="price">
-                                <p>Nuit à partir de 46</p>
-                                <p class="euro">€</p>
-                            </div>
+                            <p class="price">Nuit à partir de 46<span class="euro">€</span></p>
                             <div class="rating">
                                 <i class="fa-solid fa-star"></i>
                                 <i class="fa-solid fa-star"></i>
                                 <i class="fa-solid fa-star"></i>
                                 <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star empty_star"></i>
+                                <i class="fa-solid fa-star"></i>
                             </div>
                         </div>
                     </a>
@@ -162,16 +149,13 @@
                         <img src="img_Booki/hebergements/1_xlarge/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="img-Hebergement">
                         <div class="hebergement_content">
                             <h3>Auberge Le Panier</h3>
-                            <div class="price">
-                                <p>Nuit à partir de 23</p>
-                                <p class="euro">€</p>
-                            </div>
+                            <p class="price">Nuit à partir de 23<span class="euro">€</span></p>
                             <div class="rating">
                                 <i class="fa-solid fa-star"></i>
                                 <i class="fa-solid fa-star"></i>
                                 <i class="fa-solid fa-star"></i>
                                 <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star empty_star"></i>
+                                <i class="fa-solid fa-star"></i>
                             </div>
                         </div>
                     </a>
@@ -179,17 +163,14 @@
                     <a href="#" class="card_hebergement">
                         <img src="img_Booki/hebergements/1_xlarge/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="img-Hebergement">
                         <div class="hebergement_content">
-                            <h3>Auberge La Canebière</h3>
-                            <div class="price">
-                                <p>Nuit à partir de 96</p>
-                                <p class="euro">€</p>
-                            </div>
+                            <h3>Hôtel chez Amina</h3>
+                            <p class="price">Nuit à partir de 96<span class="euro">€</span></p>
                             <div class="rating">
                                 <i class="fa-solid fa-star"></i>
                                 <i class="fa-solid fa-star"></i>
                                 <i class="fa-solid fa-star"></i>
                                 <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star empty_star"></i>
+                                <i class="fa-solid fa-star"></i>
                             </div>
                         </div>
                     </a>
@@ -209,17 +190,14 @@
                         <div class="populaires_content">
                             <div class="populaires_info">
                                 <h3>Hôtel le soleil du matin</h3>
-                                <div class="price">
-                                    <p>Nuit à partir de 128</p>
-                                    <p class="euro">€</p>
-                                </div>
+                                <p class="price">Nuit à partir de 128<span class="euro">€</span></p>
                             </div>
                             <div class="rating">
                                 <i class="fa-solid fa-star"></i>
                                 <i class="fa-solid fa-star"></i>
                                 <i class="fa-solid fa-star"></i>
                                 <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star empty_star"></i>
+                                <i class="fa-solid fa-star"></i>
                             </div>
                         </div>
                     </a>
@@ -229,17 +207,14 @@
                         <div class="populaires_content">
                             <div class="populaires_info">
                                 <h3>Chambres d'hôtes Au coeur de l'eau</h3>
-                                <div class="price">
-                                    <p>Nuit à partir de 71</p>
-                                    <p class="euro">€</p>
-                                </div>
+                                <p class="price">Nuit à partir de 71<span class="euro">€</span></p>
                             </div>
                             <div class="rating">
                                 <i class="fa-solid fa-star"></i>
                                 <i class="fa-solid fa-star"></i>
                                 <i class="fa-solid fa-star"></i>
                                 <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star empty_star"></i>
+                                <i class="fa-solid fa-star"></i>
                             </div>
                         </div>
                     </a>
@@ -249,17 +224,14 @@
                         <div class="populaires_content">
                             <div class="populaires_info">
                                 <h3>Hôtel Bleu et Blanc</h3>
-                                <div class="price">
-                                    <p>Nuit à partir de 68</p>
-                                    <p class="euro">€</p>
-                                </div>
+                                <p class="price">Nuit à partir de 68<span class="euro">€</span></p>
                             </div>
                             <div class="rating">
                                 <i class="fa-solid fa-star"></i>
                                 <i class="fa-solid fa-star"></i>
                                 <i class="fa-solid fa-star"></i>
                                 <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star empty_star"></i>
+                                <i class="fa-solid fa-star"></i>
                             </div>
                         </div>
                     </a>
