Responsive laptop over

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
         <!--BLOC HEBERGEMENTS-->
         <div class="bloc_logements" id="rep_logements" >
-
+            <!-- Section HEBERGEMENTS-->
             <section class="hebergements">
                 <h2>Hébergements à Marseille</h2>
                 <div class="hebergements_list">
@@ -178,6 +178,7 @@
                 <a href="#" id="load-more">Afficher plus</a>
             </section>
 
+            <!-- Section POPULAIRES-->
             <section class="populaires">
                 <div class="populaires_title">
                     <h2>Les plus populaires</h2>
