Responsive laptop/tablette done

--- a/index.html
+++ b/index.html
@@ -46,27 +46,29 @@
                     <input type="button" name="button_city" value="Rechercher" id="recherche">
             </form>
             
-            <div class="filters_box">
+            <div class="filters_content">
                 <span id="filters_title">Filtres</span>
-                <!--filtre Economique-->
-                <div class="filters"> 
-                    <i class="fa-solid fa-money-bill-wave fa-lg"></i>
-                    <span>Économique</span>
-                </div>
-                <!--filtre Familial-->
-                <div class="filters">
-                    <i class="fa-solid fa-person fa-lg" id="specific_family"></i>
-                    <span>Familial</span>
-                </div>
-                <!--filtre Romantique-->
-                <div class="filters">
-                    <i class="fa-solid fa-heart fa-lg"></i>
-                    <span>Romantique</span>
-                </div>
-                <!--filtre Animaux-->
-                <div class="filters">
-                    <i class="fa-solid fa-dog fa-lg"></i>
-                    <span>Animaux autorisés</span>
+                <div class="filters_boxes">
+                    <!--filtre Economique-->
+                    <div class="filters"> 
+                        <i class="fa-solid fa-money-bill-wave fa-lg"></i>
+                        <span>Économique</span>
+                    </div>
+                    <!--filtre Familial-->
+                    <div class="filters">
+                        <i class="fa-solid fa-person fa-lg" id="specific_family"></i>
+                        <span>Familial</span>
+                    </div>
+                    <!--filtre Romantique-->
+                    <div class="filters">
+                        <i class="fa-solid fa-heart fa-lg"></i>
+                        <span>Romantique</span>
+                    </div>
+                    <!--filtre Animaux-->
+                    <div class="filters">
+                        <i class="fa-solid fa-dog fa-lg"></i>
+                        <span>Animaux autorisés</span>
+                    </div>
                 </div>
             </div>
 
@@ -175,7 +177,9 @@
                         </div>
                     </a>
                 </div>
-                <a href="#" id="load-more">Afficher plus</a>
+                <div class="load-more">
+                    <a href="#">Afficher plus</a>
+                </div>
             </section>
 
             <!-- Section POPULAIRES-->
