Comportement-mobile_corrections 1

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         <!--BLOC HEBERGEMENTS-->
         <div class="bloc_logements">
             <!-- Section HEBERGEMENTS-->
-            <section class="hebergements">
+            <section class="hebergements" id="rep_logements">
                 <h2>Hébergements à Marseille</h2>
                 <div class="hebergements_list">
                     <!--Auberge La Canebière-->
