--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     <input type="text" name="choosen_city" id="city" placeholder="Marseille, France">
                 </div>
                     <input type="button" name="button_city_txt" value="Rechercher" id="recherche_txt">
-                    <input type="button" name="button_city_icon" value="&#xf002" id="recherche_icon" class="fa-solid fa-magnifying-glass fa-lg">
+                    <input type="button" name="button_city_icon" value="&#xf002;" id="recherche_icon" class="fa-solid fa-magnifying-glass fa-lg">
 
             </form>
             
